...
            "state": "translated",
            "value": "Hoy"
          }
        }
      }
    },
    "Language": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Language"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Idioma"
          }
        },
        "pt": {
          "stringUnit": {
            "state": "translated",
            "value": "Idioma"
...
